--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <h1 class="title-t4">2023년 신년계획</h1>
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">취업하기</div>
+        <div class="bucket img1-t2 center done">취업하기</div>
         <div class="bucket img2 center">정처기 자격증따기</div>
         <div class="bucket img1 center">한국사1급취득</div>
         <div class="bucket img2 center">광주 일자리 경험하기</div>
